src-ken&y/objects/Sales_Order_Line__c.object
<CustomObject>
    <customHelpPage>HelpSalesOrders_Managing</customHelpPage>
    <description>Line Items on the Sales Order.</description>
    <fields>
        <fullName>Accounting_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounting Default.</description>
        <label>Accounting Segment</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Line</label>
        <referenceTo>Agreement_Line__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation Rule</label>
        <referenceTo>Allocation_Rule__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowances__c</fullName>
        <description>Allowances for the line.  Multiple allowances get summarized per line.</description>
        <label>Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>SOL (Unit Price-(Off Invoice Rate) * Quantity) + Discount Percentage(value)/Discount Amount + Allowances ( Allowance Applied) + SOL Sales Tax Amount + SOL Value Added Tax</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Available_Inventory__c</fullName>
        <description>Available Inventory for the SO Line and is calculated only on the add/manage page for SO.</description>
        <inlineHelpText>Available inventory for the sales order line; calculated only on the add/manage page for sales orders.</inlineHelpText>
        <label>Available Inventory</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backorder_Value__c</fullName>
        <formula>(Quantity_Backordered__c  *  (Unit_Price__c  - Off_Invoice_Rate__c)) * (1- Discount_Percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backorder Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillBack_Commitment__c</fullName>
        <label>BillBack Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillBack_Rate__c</fullName>
        <description>For Trade Promotion Bill Back Commitment</description>
        <label>BillBack Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <label>CIF</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Unique identifier to specify this company for data integrations</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company passed down from the sales order header</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_parent_Customer_ID__c</fullName>
        <formula>Sales_Order__r.Customer__r.Top_Parent_Customer__c</formula>
        <label>Corporate parent Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Sales_Order__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>Sales_Order__r.Customer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Item_Number__c</fullName>
        <description>Customer&apos;s item number</description>
        <label>Customer Item Number</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <formula>Agreement_Line__r.Customer_PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Site</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Customer)</relationshipLabel>
        <relationshipName>Sales_Order_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Due__c</fullName>
        <formula>Required_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer &apos;required by&apos; date minus today&apos;s date.</inlineHelpText>
        <label>Days Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Promised__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days remaining until the delivery promise date (expected by the customer).</inlineHelpText>
        <label>Days from Promised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>If item is misc, a description is required; if item is not misc, add additional information as needed. The description will be entered automatically on sales orders, shipping, and invoicing documents.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dimension_UOM_Name__c</fullName>
        <formula>Dimension_UOM__r.Name</formula>
        <label>Dimension UOM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copy of Product&apos;s Dimension UOM field</description>
        <label>Dimension UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Dimension UOM)</relationshipLabel>
        <relationshipName>Sales_Order_Lines_Dimension_UOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <description>Discount allowed for this item</description>
        <inlineHelpText>Maximum discount allowed for this item.</inlineHelpText>
        <label>Discount Percent</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>Duty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Delivery_Date__c</fullName>
        <description>Earliest date/time product can be delivered.</description>
        <label>Earliest Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earliest_Ship_Date__c</fullName>
        <description>Earliest date/time product can be shipped.</description>
        <label>Earliest Ship Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Customer_Reference__c</fullName>
        <description>End customer reference field is used to store the customer information if the Customer is not available on the system for Resale Sales orders.</description>
        <label>End Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Sales Order Lines (End Customer)</relationshipLabel>
        <relationshipName>Sales_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <description>The number of currently unresolved exceptions on this record.</description>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Price__c</fullName>
        <description>Customer Expected Price</description>
        <label>Expected Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <formula>(IF(ISPICKVAL(Rate_Basis__c, &apos;Flat&apos;), 1, Quantity_Ordered__c)  *  (Unit_Price__c  - Off_Invoice_Rate__c) * (1- Discount_Percent__c ) ) + Allowances__c  - Freight_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The extended cost for the line. Extended cost is the unit cost minus allowances multiplied by the number of items that were purchased, and then minus freight allowance</inlineHelpText>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Allowance__c</fullName>
        <description>sum of applied allowances of record type Freight, subtracted into the extended price line once</description>
        <inlineHelpText>sum of applied allowances of record type Freight, subtracted into the extended price line once</inlineHelpText>
        <label>Freight Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Facility_Id__c</fullName>
        <description>Facility Id via &quot;From Location&quot; field  (KNDY-3420)</description>
        <formula>Ship_From_Location__r.Facility__c</formula>
        <label>From Facility Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Fulfillment Category)</relationshipLabel>
        <relationshipName>Sales_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Notes__c</fullName>
        <label>Fulfillment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Source__c</fullName>
        <label>Fulfillment Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Build To Order</fullName>
                </value>
                <value>
                    <fullName>Back To Back</fullName>
                </value>
                <value>
                    <fullName>Resale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Start_Date__c</fullName>
        <label>Fulfillment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HS_Code__c</fullName>
        <label>HS Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <description>If selected, there is a problem with the sales order line. Exceptions must be resolved before you can process the order.</description>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <formula>Sales_Order__r.Historical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Taxes__c</fullName>
        <label>Import Taxes</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoiceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Source__c</fullName>
        <description>Copied from Item Source on product change</description>
        <label>Item Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Specification</label>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Delivery_Date__c</fullName>
        <description>Latest date/time product can be delivered.</description>
        <label>Latest Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Ship_Date__c</fullName>
        <description>Latest date/time product can be shipped.</description>
        <label>Latest Ship Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <label>Line Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Beginning line number on the sales order</description>
        <label>Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Extended_Price__c - ( Quantity_Ordered__c *  Standard_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Pricing_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Pricing Rule</label>
        <referenceTo>Allowance_Rule__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Shippable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Shippable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Floor_Spaces__c</fullName>
        <formula>IF (Product__r.Stackable__c,
( Quantity_Ordered__c / (Product__r.Units_per_Pallet__c * 2)),
( Quantity_Ordered__c / Product__r.Units_per_Pallet__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Floor Spaces</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Pallets__c</fullName>
        <formula>( Quantity_Ordered__c / Product__r.Units_per_Pallet__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The order weight includes the weight of the pallets, which is based on the number of pallets for the selected order.</inlineHelpText>
        <label>Number of Pallets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_stackable_pallets__c</fullName>
        <description>Pallets needed for stackable products (having stackable checkbox checked)</description>
        <formula>IF (Product__r.Stackable__c, 
              CEILING(  Quantity_Ordered__c / Product__r.Units_per_Pallet__c ) , 
              0
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of stackable shipping pallets required for the line items.</inlineHelpText>
        <label>Number of stackable pallets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Off_Invoice_Paid__c</fullName>
        <label>Off Invoice Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Invoice_Rate__c</fullName>
        <description>For Trade Promotion Off Invoice Rate</description>
        <inlineHelpText>The trade promotion off-invoice rate.</inlineHelpText>
        <label>Off Invoice Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ordered_Date_Time__c</fullName>
        <label>Ordered Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Quantity_Ordered__c</fullName>
        <description>The quantity that was ordered initially before allocation and other cuts.</description>
        <label>Original Quantity Ordered</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Packaging UOM)</relationshipLabel>
        <relationshipName>StockingUOM_Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricebook_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used &amp; populated during pricing call.</description>
        <label>Pricebook Line</label>
        <referenceTo>Pricebook_Line__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricebook</label>
        <referenceTo>Pricebook__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Date__c</fullName>
        <description>Populated during pricing call, only editable when the price determination method on the SO is set to Manual.</description>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Every__c</fullName>
        <formula>Pricing_UOM__r.Every__c</formula>
        <label>Pricing UOM Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Recurrence__c</fullName>
        <formula>TEXT(Pricing_UOM__r.Recurrence__c)</formula>
        <label>Pricing UOM Recurrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <infoMessage>Pricing UOM must be time based</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Pricing UOM)</relationshipLabel>
        <relationshipName>Sales_Order_Lines_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Reference</label>
        <referenceTo>Cross_Reference__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Weight__c</fullName>
        <label>Product Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Product__c.Item__r.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_From_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase From Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Putaway_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location at which the item is going to be putaway to on the Receiving screen. Hidden field to be used only on the receiving screen.</description>
        <label>Putaway Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Putaway Location)</relationshipLabel>
        <relationshipName>Sales_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>The quantity that is allocated to the sales order line but not yet shipped.</description>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Available_to_Ship__c</fullName>
        <description>Used in fulfillment calculations - not stored</description>
        <label>Quantity Available to Ship</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Backordered__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated field which equals quantity ordered - (quantity allocated + quantity shipped) </description>
        <inlineHelpText>Calculation: Quantity Ordered - (Quantity Allocated + Quantity Shipped). A sales order line cannot be closed if the backordered quantity is greater than zero.</inlineHelpText>
        <label>Quantity Backordered</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Before_Allocation__c</fullName>
        <label>Quantity Before Allocation</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Change_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required code associated with quantity changes</description>
        <label>Reason Code</label>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_From_Stock__c</fullName>
        <description>Selling quantity converted to Stocking quantity</description>
        <label>Quantity From Stock</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Fulfilled__c</fullName>
        <label>Quantity Fulfilled</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <description>The number of items ordered in this sales order line</description>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Planned__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>The total quantity that is currently planned for shipping.</description>
        <inlineHelpText>The total quantity that is currently planned for shipping.</inlineHelpText>
        <label>Quantity Planned</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Released__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>The quantity that is released to be allocated against the sales order line.</description>
        <label>Quantity Released</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of items that have been shipped to date. This field is copied over and kept up to date from the corresponding shipment details object.</description>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Ship__c</fullName>
        <description>Used in fulfillment calculations - not stored</description>
        <label>Quantity to Ship</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Basis__c</fullName>
        <label>Rate Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>